--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8" />
     <link rel="icon" href="/5G-PHA-Display-Website/favicon.svg" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>(开发中)5G手机评价分析展示网站</title>
+    <title>展示网站 - 5G手机评价分析</title>
     <!-- element css cdn, if you use custom theme, remove it. -->
     <!-- <link
       rel="stylesheet"
